--- a/RuizWebsite/css/main.css
+++ b/RuizWebsite/css/main.css
@@ -40,11 +40,22 @@
     background-size: cover;
     position: relative;
 } */
+
+.lyricsCards{
+    margin: 80px 80px;
+
+}
+
+#lyricsCards{
+    width: 15rem;
+    
+}
 #lyrics{
-    /* background-image: url(../images/GuitarTree/614.jpg); */
+    /* background-image: url(../images/arena.jpg); */
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
 #events{
     background-image: url(../images/james_portrait.jpg);
@@ -131,6 +142,8 @@ footer ul, footer span {
     height: 250px;
     width: 250px;
 }
+
+
 
 .jumbotron {
     background-color: rgba(255,255,255,0);
